# AI-Powered-Medicinal-Plant-Identification

./: IndoHerb2.ipynb  README.md
API/: app.py  feature_maps.py  gradcam.py  model.py  pyproject.toml  requirements.txt  utils.py
API/models/: classes.pth
Data_operations/: Transformations.py  data_loader.py  main.py  split.py
Results/: output.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
src/indoherb/: model.py  train.py
